Updated and modernized code in useradmin